# AdaptiveAI-

./: CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt  Core.md  Evolution.h  adaption.cpp  adaption.h  evolution.cpp  meta_learning.cpp  meta_learning.h  policy.cpp  policy.h
Scripts/: CMakeLists.txt  demo_sensing.cpp  demo_sensing.h  run_adaptive_core.cpp  scr.md
Server/: p2p_communication.h  server_core.h  sync.h
data/: data.md
data/processed/: processed.cpp
data/raws/: packet.cpp
docs/: adaptive_ai_design.md
modules/: CMakeLists.txt  modules.md
modules/communications/: CMakeLists.txt  repc_client.cpp  repc_client.h  secure_channel.cpp  secure_channel.h
modules/preprocessing/: CMakeLists.txt  data_Cleaner.h  data_cleaner.cpp  feature_extraction.h  freature_extraction.cpp
modules/protection/: CMakeLists.txt  intrusion_detector.cpp  intrusion_detector.h  protect.md  self_defense.cpp  self_defense.h
modules/sensor/: CMakeLists.txt  network_sensor.cpp  network_sensor.h  system_monitor.cpp  system_monitor.h
tests/: CMakeLists.txt  test_adaption.cpp  test_feature_extraction.cpp  test_intrusion_detector.cpp  tests.md
utils/: CMakeLists.txt  config_channel.cpp  config_channel.h  logger.cpp  logger.h  metrics.cpp  metrics.h  util.md
